--- a/pathway_analysis/Biopython.ipynb
+++ b/pathway_analysis/Biopython.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,37 +42,6 @@
     "\n",
     "# split the column by \":\" and put EC codes in Mgx_EC\n",
     "Mgx_EC = Mgx[\"Gene.Family\"].str.split(\":\", expand=True)[0]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0         1.1.1.1\n",
-       "1       1.1.1.100\n",
-       "2       1.1.1.103\n",
-       "3       1.1.1.105\n",
-       "4       1.1.1.107\n",
-       "          ...    \n",
-       "2444      7.5.2.4\n",
-       "2445      7.5.2.6\n",
-       "2446      7.6.2.2\n",
-       "2447      7.6.2.5\n",
-       "2448      7.6.2.7\n",
-       "Name: 0, Length: 2449, dtype: object"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Mgx_EC"
    ]
   },
   {
@@ -89,27 +58,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1569918503.py, line 7)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\Amaury\\AppData\\Local\\Temp\\ipykernel_25268\\1569918503.py\"\u001b[1;36m, line \u001b[1;32m7\u001b[0m\n\u001b[1;33m    print (record.pathway[][1])\u001b[0m\n\u001b[1;37m                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from Bio.KEGG import REST\n",
-    "from Bio.KEGG import Enzyme\n",
-    "request = REST.kegg_get(Mgx_EC[0])\n",
-    "open(\"ec_5.4.2.2.txt\", \"w\").write(request.read())\n",
-    "records = Enzyme.parse(open(\"ec_5.4.2.2.txt\"))\n",
-    "record = list(records)[0]\n",
-    "print (record.pathway)\n",
-    "# print (record.pathway[...][1])"
+    "import json\n",
+    "\n",
+    "pathways_dict = {}\n",
+    "for ec_number in Mgx_EC:\n",
+    "    if not ec_number.islower(): # against Bad request error from preliminary EC codes (e.g. \"1.3.1.n3\" -> Mgx_EC[430] )\n",
+    "        pathways = REST.kegg_link(\"pathway\", ec_number).read().strip().split(\"\\n\")\n",
+    "        if not pathways == [\"\"]: # against no responses to request\n",
+    "            for pathway in pathways:\n",
+    "                pathway_id, pathway_name = pathway.split(\"\\tpath:\")\n",
+    "                pathway_id = pathway_id.split(\":\")[1]\n",
+    "                if pathway_id not in pathways_dict:\n",
+    "                    pathways_dict[pathway_id] = []\n",
+    "                pathways_dict[pathway_id].append(pathway_name)\n",
+    "\n",
+    "with open(\"pathways_dict.txt\", \"w\") as file:\n",
+    "    json.dump(pathways_dict, file)  # encode dict into JSON"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading the dictionnary of pathways"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "# Open the file for reading\n",
+    "with open(\"pathways_dict.txt\", \"r\") as file:\n",
+    "    # Load the dictionary from the file\n",
+    "    pathways_dict = json.load(file)"
    ]
   },
   {
