--- a/pathway_analysis/Biopython.ipynb
+++ b/pathway_analysis/Biopython.ipynb
@@ -7,15 +7,15 @@
    "source": [
     "## Versions\n",
     "\n",
-    "Python:\n",
+    "Python: 3.7.2\n",
     "\n",
-    "pandas:\n",
+    "pandas: 1.3.5\n",
     "\n",
-    "Pip:\n",
+    "Pip: 23.0.1\n",
     "\n",
-    "Biopython:\n",
+    "Biopython: 1.81\n",
     "\n",
-    "keggtools:"
+    "keggtools: 1.0.1"
    ]
   },
   {
@@ -41,7 +41,7 @@
     "Mgx = pd.read_table('../analysis/data/mgxData')\n",
     "\n",
     "# split the column by \":\" and put EC codes in Mgx_EC\n",
-    "Mgx_EC = Mgx[\"Gene.Family\"].str.split(\":\", expand=True)[0]\n"
+    "Mgx_EC = Mgx[\"Gene.Family\"].str.split(\":\", expand=True)[0]"
    ]
   },
   {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
     "                    pathways_dict[pathway_id] = []\n",
     "                pathways_dict[pathway_id].append(pathway_name)\n",
     "\n",
-    "with open(\"pathways_dict.txt\", \"w\") as file:\n",
+    "with open(\"pathways_dict.json\", \"w\") as file:\n",
     "    json.dump(pathways_dict, file)  # encode dict into JSON"
    ]
   },
@@ -91,14 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "\n",
     "# Open the file for reading\n",
-    "with open(\"pathways_dict.txt\", \"r\") as file:\n",
+    "with open(\"pathways_dict.json\", \"r\") as file:\n",
     "    # Load the dictionary from the file\n",
     "    pathways_dict = json.load(file)"
    ]
@@ -109,47 +109,86 @@
    "metadata": {},
    "source": [
     "# Enrichment and Testing\n",
-    "\n",
-    "Install keggtools package from pip:\n",
-    "\n",
-    "> python -m pip install keggtools"
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Download all ec pathways from KEGG"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "need to 'run_analysis' first",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_25268\\3666560864.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;31m# to_dataframe method requires pandas installation\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0manalysis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_dataframe\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Tools\\Python_3.7.2\\lib\\site-packages\\keggtools\\analysis.py\u001b[0m in \u001b[0;36mto_dataframe\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    327\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    328\u001b[0m         \u001b[1;31m# Check if summary exists\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 329\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_check_analysis_result_exist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    330\u001b[0m         \u001b[0msummary_list\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    331\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mresult\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mresult\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Tools\\Python_3.7.2\\lib\\site-packages\\keggtools\\analysis.py\u001b[0m in \u001b[0;36m_check_analysis_result_exist\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    151\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    152\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mresult\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mresult\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 153\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"need to 'run_analysis' first\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    154\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    155\u001b[0m     def get_subset(\n",
-      "\u001b[1;31mValueError\u001b[0m: need to 'run_analysis' first"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from keggtools import Enrichment\n",
+    "import requests\n",
     "\n",
-    "# Add pathway object to list\n",
-    "pathway_list = records\n",
+    "# Define the URL for the KEGG REST API\n",
+    "url = 'http://rest.kegg.jp/list/pathway/ec'\n",
     "\n",
-    "# Init analysis with organism code\n",
-    "analysis = Enrichment(pathways=pathway_list)\n",
+    "# Send a GET request to the URL to retrieve the pathway IDs\n",
+    "response = requests.get(url)\n",
     "\n",
-    "# Study genes as list of entrez gene id's\n",
-    "study_genes = Mgx_EC\n",
-    "analysis.run_analysis(gene_list=study_genes)\n",
+    "# Parse the response to get the pathway IDs\n",
+    "all_pathway_ids = [line.split('\\t')[0] for line in response.text.strip().split('\\n')]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Attribute the related enzymes for all the pathways"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "import json\n",
     "\n",
-    "# to_dataframe method requires pandas installation\n",
-    "result = analysis.to_dataframe()\n",
-    "print(result.head())"
+    "ec_pathways = {}\n",
+    "\n",
+    "for pathway_id in all_pathway_ids:\n",
+    "    pathway_url = f'http://rest.kegg.jp/get/{pathway_id}'\n",
+    "    pathway_response = requests.get(pathway_url)\n",
+    "    pathway_text = pathway_response.text.strip()\n",
+    "    \n",
+    "    # find the lines containing enzyme information\n",
+    "    pattern = r\"ENZYME\\s+(.*?)\\s+COMPOUND\"\n",
+    "    enzyme_lines = re.search(pattern, pathway_text, re.DOTALL)\n",
+    "    if enzyme_lines:\n",
+    "        enzymes = [s.lstrip() for s in enzyme_lines.group(1).strip().split('\\n')]\n",
+    "        ec_pathways[pathway_id] = enzymes\n",
+    "    \n",
+    "    # Write the pathway data to a file\n",
+    "    #with open(f'{pathway_id}.txt', 'w') as f:\n",
+    "    #    f.write(pathway_text)\n",
+    "\n",
+    "with open(\"all_pathways_enzymes_dict.json\", \"w\") as file:\n",
+    "    json.dump(ec_pathways, file)  # encode dict into JSON"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "# Open the file for reading\n",
+    "with open(\"all_pathways_enzymes_dict.json\", \"r\") as file:\n",
+    "    # Load the dictionary from the file\n",
+    "    all_pathways_enzymes_dict = json.load(file)"
    ]
   }
  ],
