--- a/pathway_analysis/Biopython.ipynb
+++ b/pathway_analysis/Biopython.ipynb
@@ -77,7 +77,7 @@
     "                    pathways_dict[pathway_id] = []\n",
     "                pathways_dict[pathway_id].append(pathway_name)\n",
     "\n",
-    "with open(\"pathways_dict.json\", \"w\") as file:\n",
+    "with open(\"data/pathways_dict.json\", \"w\") as file:\n",
     "    json.dump(pathways_dict, file)  # encode dict into JSON"
    ]
   },
@@ -98,7 +98,7 @@
     "import json\n",
     "\n",
     "# Open the file for reading\n",
-    "with open(\"pathways_dict.json\", \"r\") as file:\n",
+    "with open(\"data/pathways_dict.json\", \"r\") as file:\n",
     "    # Load the dictionary from the file\n",
     "    pathways_dict = json.load(file)"
    ]
@@ -173,20 +173,20 @@
     "    #with open(f'{pathway_id}.txt', 'w') as f:\n",
     "    #    f.write(pathway_text)\n",
     "\n",
-    "with open(\"all_pathways_enzymes_dict.json\", \"w\") as file:\n",
+    "with open(\"data/all_pathways_enzymes_dict.json\", \"w\") as file:\n",
     "    json.dump(ec_pathways, file)  # encode dict into JSON"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "\n",
     "# Open the file for reading\n",
-    "with open(\"all_pathways_enzymes_dict.json\", \"r\") as file:\n",
+    "with open(\"data/all_pathways_enzymes_dict.json\", \"r\") as file:\n",
     "    # Load the dictionary from the file\n",
     "    all_pathways_enzymes_dict = json.load(file)"
    ]
