Created enrichment analysis R notebook

--- a/pathway_analysis/Biopython.ipynb
+++ b/pathway_analysis/Biopython.ipynb
@@ -143,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Attribute the related enzymes for all the pathways"
+    "Attribute the related enzymes for all the pathways (also filters out pathways without enzymes)"
    ]
   },
   {
@@ -168,10 +168,6 @@
     "    if enzyme_lines:\n",
     "        enzymes = [s.lstrip() for s in enzyme_lines.group(1).strip().split('\\n')]\n",
     "        ec_pathways[pathway_id] = enzymes\n",
-    "    \n",
-    "    # Write the pathway data to a file\n",
-    "    #with open(f'{pathway_id}.txt', 'w') as f:\n",
-    "    #    f.write(pathway_text)\n",
     "\n",
     "with open(\"data/all_pathways_enzymes_dict.json\", \"w\") as file:\n",
     "    json.dump(ec_pathways, file)  # encode dict into JSON"
@@ -179,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
